# chessy

./: CMakeLists.txt  README.md
src/: board.c  board.h  end.c  eval.c  eval.h  fen.c  init.c  main.c  main.h  main_search.c  move.c  move.h  move_gen.c  move_parsing.c  perft.h  perft_tests.c  print.c  quescience.c  search.h  search_tests.c  transposition_table.c  x_board.c
test/games/: vs_computer_2017-09-27 (1).pgn  vs_computer_2017-09-27.pgn
test/perft_tests/: 1.test  2.test  3.test  4.test  5.test  6.test
test/search_tests/: ccr.test  easy.test
